--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
 .cell{
     /* border:1px solid black; */
     background-color: aqua;
-    height:30px;
-    width:30px;
+    /* height:30px;
+    width:30px; */
     
     
 }
