--- a/style.css
+++ b/style.css
@@ -1,21 +1,33 @@
-*,body{
+body{
+    height: 1000px;
     margin:0px;
     padding:0px;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: bisque;
+
 }
 .container{
     width:480px;
     height: 480px;
     display:flex;
     flex-wrap: wrap;
-    
+    border: 2px solid black;
 }
 
 .cell{
     /* border:1px solid black; */
-    background-color: aqua;
-    /* height:30px;
-    width:30px; */
-    
-    
+    background-color: white;    
+}
+
+button{
+    background-color: coral;
+    color:white;
+    font-size:20px;
+    padding:7px;
+    border-radius: 8px;
+    margin-bottom:30px;
 }
