--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     height: 480px;
     display:flex;
     flex-wrap: wrap;
-    border: 2px solid black;
+    border: 2px solid rgb(0, 0, 0);
 }
 
 .cell{
